<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PanicButtonSpike</string>
    <string name="spike_header">Panic Button Spike Home</string>
    <string name="twitter_spike">Twitter Integration Spike</string>
    <string name="location_spike">Location Spike</string>
    <string name="ussd_spike">USSD Spike</string>
    <string name="hardware_trigger_spike">Hardware Trigger Spike</string>
    <string name="enter_tweet">Enter your tweet</string>
    <string name="tweet">Tweet</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="saveNumber">Save Number</string>
    <string name="enter_twitter_short_code">Enter Twitter ShortCode</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="multi_button_spike">Multi Button Spike</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="wizard_spike">Wizard Spike</string>
</resources>
