<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="1dp"
            android:text="@string/twitter_spike"
            android:onClick="showTwitterSpike"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="1dp"
            android:text="@string/location_spike"
            android:onClick="showLocationSpike"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="1dp"
            android:text="@string/hardware_trigger_spike"
            android:onClick="showHardwareTriggerSpike"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="1dp"
            android:text="@string/multi_button_spike"
            android:onClick="showMultiButtonSpike"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="1dp"
            android:text="@string/wizard_spike"
            android:onClick="showWizardSpike"/>
</LinearLayout>

