<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <EditText
            android:id="@+id/twitterShortCode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_twitter_short_code"
            android:inputType="number"/>
    <EditText
            android:id="@+id/tweetBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_tweet"
            android:minLines="3"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="1dp"
            android:text="@string/tweet"
            android:onClick="onTweetClick"/>
</LinearLayout>

